메인 슬라이드 추가

--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -250,15 +250,17 @@ body header#header .container {
   width: 980px;
   height: 100px;
   margin: 0 auto;
-  padding-top: 15px;
+  padding-top: 3px;
 }
 body header#header .container h1 {
+  position: absolute;
+  left: -19px;
   background: url("../images/logo.svg") no-repeat center / auto 100%;
   margin: 0;
   padding: 0;
   font-size: 0;
-  width: 206px;
-  height: 65.4px;
+  width: 244.9px;
+  height: 91.7px;
 }
 body header#header .container h1 a {
   display: block;
@@ -846,10 +848,17 @@ body div#content .container .main_wrap section.main_content::after {
   clear: both;
   display: block;
 }
-body div#content .container .main_wrap section.main_content h2 {
-  font-size: 0;
-  background: url("../images/main.jpg") no-repeat center / cover;
+body div#content .container .main_wrap section.main_content ul.main_img {
+  position: relative;
+  list-style: none;
+  margin: 0;
+  padding: 0;
   width: 594px;
+}
+body div#content .container .main_wrap section.main_content ul.main_img li {
+  position: absolute;
+  font-size: 0;
+  width: 100%;
   height: 540px;
   float: left;
 }
@@ -1390,7 +1399,7 @@ body div#content .sub_container section.contents div.tab_contents ul {
   margin-top: 10px;
   list-style: none;
   border: 2px solid #ebebeb;
-  padding: 20px 0 20px 20px;
+  padding: 20px;
 }
 body div#content .sub_container section.contents div.tab_contents ul li {
   font-size: 17px;
@@ -1407,16 +1416,65 @@ body div#content .sub_container section.contents div.tab_contents div.con01 h5 {
 body div#content .sub_container section.contents div.tab_contents div.con01 ul li {
   font-weight: 600;
   color: #333;
+  word-break: keep-all;
+  line-height: 24px;
 }
 body div#content .sub_container section.contents div.tab_contents div.con01 ul li p {
-  margin: 8px 0 0 0;
+  margin: 0;
   font-size: 15px;
   font-weight: 400;
   color: #555;
 }
-body div#content .sub_container section.contents div.tab_contents div.con02 span {
+body div#content .sub_container section.contents div.tab_contents div.con02 li {
+  word-break: keep-all;
+  line-height: 24px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con02 li span {
   display: block;
-  margin: 5px 0 0 164px;
+  margin-left: 11px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con02 li table.program {
+  border-bottom: 2px solid #ccc;
+  width: 100%;
+  border-spacing: 0;
+  padding: 0;
+  border-collapse: collapse;
+  font-size: 17px;
+  margin: 0 0 30px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con02 li table.program tbody th {
+  padding: 10px 4px;
+  vertical-align: middle;
+  text-align: center;
+  background: #757575;
+  color: #fff;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+}
+body div#content .sub_container section.contents div.tab_contents div.con02 li table.program tbody th:last-child {
+  border-right: none;
+}
+body div#content .sub_container section.contents div.tab_contents div.con02 li table.program tbody td {
+  padding: 14px 0 14px 20px;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  vertical-align: middle;
+  text-align: left;
+}
+body div#content .sub_container section.contents div.tab_contents div.con02 li table.program tbody td:first-child {
+  text-align: center;
+  padding: 0 14px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con02 li table.program tbody td:last-child {
+  border-right: none;
+}
+body div#content .sub_container section.contents div.tab_contents div.con02 li table.program tbody td ul {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+body div#content .sub_container section.contents div.tab_contents div.con02 li table.program tbody td ul li {
+  margin-top: 5px;
 }
 body div#content .sub_container section.contents div.tab_contents div.con03 div.care {
   position: relative;
@@ -1441,11 +1499,20 @@ body div#content .sub_container section.contents div.tab_contents div.con03 div.
   color: #333;
   line-height: 24px;
   margin: 0;
+  word-break: keep-all;
+}
+body div#content .sub_container section.contents div.tab_contents div.con03 ul li {
+  word-break: keep-all;
+  line-height: 26px;
 }
 body div#content .sub_container section.contents div.tab_contents div.con03 ul li ul.order {
   margin: 0;
   padding: 0;
   border: none;
+}
+body div#content .sub_container section.contents div.tab_contents div.con03 ul li span {
+  display: block;
+  margin-left: 56px;
 }
 body div#content .sub_container section.contents div.tab_contents div.con03 ul.care-list {
   margin-top: 0;
@@ -1460,6 +1527,143 @@ body div#content .sub_container section.contents div.tab_contents div.con03 p {
 }
 body div#content .sub_container section.contents div.tab_contents div.con03 p span {
   font-weight: 800;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service {
+  margin-bottom: 0;
+  padding: 0;
+  border-radius: 15px;
+  height: 430px;
+  border: 1px solid #E4E2E2;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service.agency {
+  height: 370px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service.agency li div {
+  height: 370px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service li {
+  float: left;
+  width: 244px;
+  margin: 0;
+  border-right: 1px dotted #E4E2E2;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service li:last-child {
+  border: none;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service li div {
+  height: 430px;
+  padding: 40px 24px 0 24px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service li div small {
+  color: #3EB69C;
+  font-size: 15px;
+  font-weight: 800;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service li div h5 {
+  margin: 0;
+  padding: 0;
+  font-size: 19px;
+  color: #333;
+  font-weight: 800;
+  margin-top: 18px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service li div h5 img {
+  width: 30px;
+  height: 30px;
+  vertical-align: bottom;
+  margin-right: 10px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service li div p {
+  color: #333;
+  font-size: 17px;
+  border-bottom: 1px solid #333;
+  word-break: keep-all;
+  margin: 10px 0 0;
+  line-height: 22px;
+  padding-bottom: 20px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service li div ul {
+  margin: 0;
+  padding: 0;
+  border: none;
+  margin-top: 20px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service li div ul li {
+  display: block;
+  color: #555;
+  font-size: 17px;
+  border: none;
+  width: 100%;
+  margin-bottom: 8px;
+  line-height: 24px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con05 ul.service li div ul li span {
+  display: block;
+  margin-left: 8px;
+}
+body div#content .sub_container section.contents div.tab_contents#tab01 div.con04::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+body div#content .sub_container section.contents div.tab_contents#tab01 div.con04 div.happy {
+  position: relative;
+  background: #F8F8F8;
+  border-radius: 15px;
+  width: 369px;
+  height: 310px;
+  margin-top: 40px;
+  float: left;
+  padding: 70px 20px 0 20px;
+  text-align: center;
+}
+body div#content .sub_container section.contents div.tab_contents#tab01 div.con04 div.happy.icon {
+  width: 540px;
+  margin-left: 71px;
+  padding: 50px 20px 0 20px;
+}
+body div#content .sub_container section.contents div.tab_contents#tab01 div.con04 div.happy.icon p {
+  margin: 40px 0 0;
+}
+body div#content .sub_container section.contents div.tab_contents#tab01 div.con04 div.happy.icon::before {
+  content: "";
+  display: block;
+  width: 24px;
+  height: 41.97px;
+  background: url("../images/arrow2.svg") no-repeat center / cover;
+  position: absolute;
+  top: 130px;
+  left: -46px;
+}
+body div#content .sub_container section.contents div.tab_contents#tab01 div.con04 div.happy h6 {
+  background: #EA609E;
+  color: #fff;
+  font-size: 17px;
+  width: 200px;
+  padding: 10px 15px;
+  margin: 0;
+  border-radius: 50px;
+  text-align: center;
+  position: absolute;
+  z-index: 99;
+  top: -20px;
+  left: 50%;
+  margin-left: -100px;
+}
+body div#content .sub_container section.contents div.tab_contents#tab01 div.con04 div.happy p {
+  margin: 50px 0 0;
+  font-size: 17px;
+  color: #333;
+  font-weight: 800;
+}
+body div#content .sub_container section.contents div.tab_contents#tab07 div.con02 ul li:nth-child(3) {
+  text-align: center;
+  margin-top: 40px;
 }
 body div#content .sub_container section.operation_contents h5 {
   position: relative;
