--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1,5 +1,5 @@
-@import "normalize.css";
-@import "fontello.css";
+@import "/wp/assets/source/css/normalize.css";
+@import "/wp/assets/source/css/fontello.css";
 /* fonts */
 /* nanum square - regular */
 @font-face {
@@ -255,7 +255,7 @@ body header#header .container {
 body header#header .container h1 {
   position: absolute;
   left: -19px;
-  background: url("../images/logo.svg") no-repeat center / auto 100%;
+  background: url("/wp/assets/source/images/logo.svg") no-repeat center / auto 100%;
   margin: 0;
   padding: 0;
   font-size: 0;
@@ -831,7 +831,7 @@ body div#content {
 }
 body div#content .container {
   width: 100%;
-  background: url("../images/bg.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/bg.jpg") no-repeat center / cover;
 }
 body div#content .container .main_wrap {
   width: 980px;
@@ -899,7 +899,7 @@ body div#content .container .main_wrap section.main_content ul li a {
   padding: 20px 0 0 20px;
 }
 body div#content .container .main_wrap section.main_content ul li.c1 {
-  background: url("../images/content1.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/content1.jpg") no-repeat center / cover;
   width: 374px;
   height: 264px;
   margin-bottom: 12px;
@@ -913,7 +913,7 @@ body div#content .container .main_wrap section.main_content ul li.c1 span {
   line-height: 22px;
 }
 body div#content .container .main_wrap section.main_content ul li.c2 {
-  background: url("../images/content2.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/content2.jpg") no-repeat center / cover;
   width: 180px;
   height: 264px;
   margin-right: 12px;
@@ -929,7 +929,7 @@ body div#content .container .main_wrap section.main_content ul li.c2 h5 span {
   margin-bottom: 10px;
 }
 body div#content .container .main_wrap section.main_content ul li.c3 {
-  background: url("../images/content3.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/content3.jpg") no-repeat center / cover;
   width: 180px;
   height: 264px;
   float: left;
@@ -951,7 +951,7 @@ body div#content .container .main_wrap section.notice_wrap {
 }
 body div#content .container .main_wrap section.notice_wrap a.info {
   display: block;
-  background: url("../images/info.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/info.jpg") no-repeat center / cover;
   width: 227px;
   height: 212px;
   padding: 40px 0 0 26px;
@@ -1051,7 +1051,7 @@ body div#content .container .main_wrap section.notice_wrap ul.notice li.veiw div
   vertical-align: top;
   font-size: 0;
   margin: 2px 0 0 2px;
-  background: url("../images/new.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/new.png") no-repeat center / cover;
   width: 13px;
   height: 12px;
 }
@@ -1232,19 +1232,19 @@ body div#content .sub_container h2.sub_title.other {
 body div#content .sub_container h2.sub_title p {
   width: 980px;
   margin: 0 auto;
-  background: url("../images/sub01.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub01.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub02 {
-  background: url("../images/sub02.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub02.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub03 {
-  background: url("../images/sub03.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub03.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub04 {
-  background: url("../images/sub04.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub04.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub05 {
-  background: url("../images/sub05.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub05.jpg") no-repeat center / cover;
 }
 body div#content .sub_container div.hello {
   position: relative;
@@ -1273,7 +1273,7 @@ body div#content .sub_container div.hello ul {
   width: 980px;
   height: 840px;
   margin: 0 auto 60px auto;
-  background: url("../images/hello.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/hello.jpg") no-repeat center / cover;
   padding: 50px;
 }
 body div#content .sub_container div.hello ul li {
@@ -1635,7 +1635,7 @@ body div#content .sub_container section.contents div.tab_contents#tab01 div.con0
   display: block;
   width: 24px;
   height: 41.97px;
-  background: url("../images/arrow2.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/arrow2.svg") no-repeat center / cover;
   position: absolute;
   top: 130px;
   left: -46px;
@@ -1721,7 +1721,7 @@ body div#content .sub_container section.operation_contents div.con01 ul li:first
   display: block;
   width: 24px;
   height: 25px;
-  background: url("../images/left.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/left.png") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con01 ul li:first-child::after {
   position: absolute;
@@ -1731,12 +1731,12 @@ body div#content .sub_container section.operation_contents div.con01 ul li:first
   display: block;
   width: 24px;
   height: 25px;
-  background: url("../images/right.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/right.png") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con01 ul li.image {
   width: 618px;
   height: 471px;
-  background: url("../images/coophn.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/coophn.svg") no-repeat center / cover;
   font-size: 0;
   margin: 60px 0 0 180px;
 }
@@ -1810,17 +1810,17 @@ body div#content .sub_container section.operation_contents div.con03 dl dt.img01
   width: 71px;
   height: 66px;
   margin-left: 113px;
-  background: url("../images/value01.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/value01.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dt.img02 {
   width: 84px;
   margin-left: 108px;
-  background: url("../images/value02.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/value02.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dt.img03 {
   width: 71px;
   margin-left: 113px;
-  background: url("../images/value03.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/value03.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dd {
   margin: 26px 0 0;
@@ -1938,12 +1938,12 @@ body div#content .sub_container section.operation_contents div.con05 div ul li s
 body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(1) p {
   width: 220px;
   height: 128px;
-  background: url("../images/img1.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/img1.jpg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(2) p {
   width: 220px;
   height: 128px;
-  background: url("../images/img2.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/img2.jpg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(3) {
   margin-right: 0;
@@ -1951,7 +1951,7 @@ body div#content .sub_container section.operation_contents div.con05 div ul li:n
 body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(3) p {
   width: 220px;
   height: 128px;
-  background: url("../images/img3.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/img3.jpg") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents ul.tabs {
   margin: 0;
@@ -2086,7 +2086,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab02 d
   display: block;
   width: 24px;
   height: 25px;
-  background: url("../images/left.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/left.png") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab02 div.con01 ul li:first-child::after {
   position: absolute;
@@ -2096,12 +2096,12 @@ body div#content .sub_container section.center_contents div.tab_contents#tab02 d
   display: block;
   width: 24px;
   height: 25px;
-  background: url("../images/right.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/right.png") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab02 div.con01 ul li.image {
   width: 680px;
   height: 371px;
-  background: url("../images/mission.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/mission.svg") no-repeat center / cover;
   font-size: 0;
   margin: 40px 0 0 150px;
 }
@@ -2192,7 +2192,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab02 d
   list-style: none;
   margin-top: 14px;
   height: 230px;
-  background: url("../images/goal.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/goal.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab02 div.con04 ul li {
   position: absolute;
@@ -2343,7 +2343,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab03 d
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div {
   position: relative;
-  background: url("../images/organization.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/organization.svg") no-repeat center / cover;
   width: 980px;
   height: 501px;
   margin-top: 30px;
@@ -2690,25 +2690,25 @@ body div#content .sub_container section.support_contents div.con01 ul li:nth-chi
   width: 56px;
   height: 72px;
   margin: 46px 0 0 55px;
-  background: url("../images/support01.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support01.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(2) h3 {
   width: 69px;
   height: 62px;
   margin: 54px 0 0 50px;
-  background: url("../images/support02.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support02.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(3) h3 {
   width: 71px;
   height: 70px;
   margin: 44px 0 0 48px;
-  background: url("../images/support03.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support03.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(4) h3 {
   width: 58px;
   height: 62px;
   margin: 51px 0 0 53px;
-  background: url("../images/support04.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support04.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(5) {
   border-right: none;
@@ -2717,12 +2717,12 @@ body div#content .sub_container section.support_contents div.con01 ul li:nth-chi
   width: 62px;
   height: 59px;
   margin: 54px 0 0 53px;
-  background: url("../images/support05.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support05.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 h5 {
   width: 980px;
   height: 51px;
-  background: url("../images/account.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/account.svg") no-repeat center / cover;
   color: #fff;
   font-weight: 500;
   font-size: 17px;
