사업안내 페이지 수정

--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -2343,7 +2343,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab03 d
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div {
   position: relative;
-  background: url("/wp/assets/source/images/organization.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/organization.svg") no-repeat center / 100% auto;
   width: 980px;
   height: 501px;
   margin-top: 30px;
