--- a/sources/css/style.less
+++ b/sources/css/style.less
@@ -3004,7 +3004,7 @@ body {
 
                             div {
                                 .relative;
-                                background: url("@{img-url}/organization.svg") no-repeat center / cover;
+                                background: url("@{img-url}/organization.svg") no-repeat center / 100% auto;
                                 width: 980px;
                                 height: 501px;
                                 margin-top: 30px;
